[project]
name = "gerador de senhas"
version = "0.1.0"
description = "\"Gerador de senhas em Python, utilizando Random, Strings e Pyfiglet\""
authors = [
    {name = "IC4R0",email = "Icaro.MSantos@hotmail.com"}
]
license = {text = "\"MIT\""}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
